--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
       "supertest": "0.13.0"
    },
    "scripts": {
-      "lighthouse:ci": "node_modules/lighthouse/lighthouse-cli/index.js --output-path=./lighthouse-report.html --quiet --chrome-flags='--headless' https://kitconcept.com"
-   },
-    "scripts": {
-      "lighthouse": "node_modules/lighthouse/lighthouse-cli/index.js --output-path=./lighthouse-report.html --quiet --chrome-flags='--headless' https://kitconcept.com/blog"
+      "lighthouse:ci": "lighthouse --output-path=./lighthouse-report.html --quiet --chrome-flags='--headless' http://localhost:3000",
+      "lighthouse": "lighthouse --output-path=./lighthouse-report.html --quiet --chrome-flags='--headless' https://localhost:3000"
    }
 }
