--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       "supertest": "0.13.0"
    },
    "scripts": {
-      "lighthouse:ci": "lighthouse --output-path=./lighthouse-report.html --quiet --chrome-flags='--headless' http://localhost:3000",
+      "lighthouse:ci": "lighthouse --output-path=./lighthouse-report.html --quiet http://localhost:3000",
       "lighthouse": "lighthouse --output-path=./lighthouse-report.html --quiet --chrome-flags='--headless' http://localhost:3000"
    }
 }
